--- a/Diploma/05. С чего начать проект.md
+++ b/Diploma/05. С чего начать проект.md
@@ -111,7 +111,7 @@ suspend fun searchCafes(@Query("searchRequest") searchRequest: String,
 ```kotlin
 @GET("search/cafes")
 suspend fun searchCafes(@Query("searchRequest") searchRequest: String,
-                        @Query("city") city: String
+                        @Query("city") city: String,
                         @Query("openHours") openHours: String): List<Cafe>
 ```
 
