Добавил картинки для отображения на экранах с ошибками. Добавил тестовый запрос "test_server_error" для проверки отображения экрана "ошибка сервера"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,5 +31,6 @@
     <string name="job_search">Поиск вакансий</string>
     <string name="enter_request">Введите запрос</string>
     <string name="clear">Очистить</string>
+    <string name="server_error">Ошибка сервера</string>
 
 </resources>
