--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="job_search">Поиск вакансий</string>
     <string name="enter_request">Введите запрос</string>
     <string name="clear">Очистить</string>
+    <string name="server_error">Ошибка сервера</string>
     <string name="share">Поделиться</string>
     <string name="favourites">Избранное</string>
     <string name="moscow">Москва</string>
