--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,7 @@
     <string name="list_empty">Список пуст</string>
 
     <string name="not_found_facancy">Вакансия не найдена или \n удалена</string>
+    <string name="salary_not_specified">Зарплата не указана</string>
 
 
 
