--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,8 +47,9 @@
 
     <string name="not_found_facancy">Вакансия не найдена или \n удалена</string>
     <string name="salary_not_specified">Зарплата не указана</string>
-
-
+    <string name="contacts">Контакты</string>
+    <string name="mail">Почта:</string>
+    <string name="phones">Телефоны:</string>
 
 
 </resources>
