--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,17 @@
     <string name="other_apps">Другие приложения</string>
     <string name="more">Остальные приложения</string>
 
+    <string name="share_vacancy">Поделиться вакансией</string>
+    <string name="no_app_to_share">Нет приложения для отправки</string>
+    <string name="send_email">Отправить email</string>
+    <string name="no_email_app">Нет почтового приложения</string>
+    <string name="call_number">Позвонить</string>
+    <string name="no_phone_app">Нет приложения для звонков</string>
+    <string name="phone">Телефон</string>
+
+    <string name="salary_not_specified">Зарплата не указана</string>
+    <string name="contacts">Контакты</string>
+    <string name="mail">Почта:</string>
+    <string name="phones">Телефоны:</string>
+
 </resources>
