[feature] Сделал функционал кнопок на экране детализации.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,5 +51,6 @@
     <string name="mail">Почта:</string>
     <string name="phones">Телефоны:</string>
 
+    <string name="share_vacancy">Поделится:</string>
 
 </resources>
