--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,4 +76,6 @@
     <string name="country">Страна</string>
     <string name="there_no_region">Такого региона нет</string>
     <string name="couldnt_get_the_list">Не удалось получить список</string>
+    <string name="no_countries_available">Не удалось получить список стран</string>
+    <string name="loading">Загрузка</string>
 </resources>
